<?xml version="1.0"?>
<package format="3">
  <name>gnss_imu_robot_localization</name>
  <version>0.0.1</version>
  <description>Launch + config for GNSS and IMU localization using robot_localization</description>

  <maintainer email="your@email.com">Li Ziye</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>